--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,12 @@
   </label>
       
 </div>
+<br>
 <div>
   <label>Fecha para la UF:
-    <input [(ngModel)]="dateInspect" placeholder="fecha">
+    <input [(ngModel)]="dateInspect" placeholder="Fecha">
   </label>
+  <br><br>
   <button (click)=searchIndicator()>Consultar</button>
   <h2>Valor en pesos:{{valueUf}}</h2>
 </div>
