--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,6 @@
     <input [(ngModel)]="date" placeholder="Fecha">
   </label>
   <br><br>
-  <button (click)="searchIndicator()">Consultar</button>
+  <button (click)="do()">Consultar</button>
   <h2>Valor en pesos:{{value}}</h2>
 </div>
