Limpiando codigo que no se use de nuevo...

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,24 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div style="text-align:center">
+  <h1>
+    Bienvenido a {{ title }}
+  </h1>
+ 
+</div>
+<h2>Ingrese si es UF o UTM y la fecha:</h2>
+<br>
 <div>
-  <label> 
-    <input [(ngModel)]="id_select" placeholder="Ingrese ID Producto"><button (click)="uno()">Buscar</button>
-    <h1>ID: {{id2}}</h1> 
-    <h1>Precio: {{price2}}</h1> 
-    <h1>Descripción: {{description2}}</h1> 
+  <label>Tipo de valor: 
+    <input [(ngModel)]="type" placeholder="UF o UTM">
   </label>
-  <br>
-  <br>
-  <br>
-  
-  <button (click)="todo()">Consultar Todo</button>
-  <table style="width:60%">
-    <tr>
-      <td style="border: 1px solid rgb(12, 15, 172);">ID</td>
-      <td style="border: 1px solid rgb(12, 15, 172);;">Precio</td>
-      <td style="border: 1px solid rgb(12, 15, 172);;">Producto</td>
-    </tr>
-    <tr>
-      <td>{{id}}</td>
-      <td>{{price}}</td>
-      <td>{{description}}</td>
-    </tr>
-  </table>
       
+</div>
+<br>
+<div>
+  <label>Fecha para la UF:
+    <input [(ngModel)]="date" placeholder="Fecha">
+  </label>
+  <br><br>
+  <button (click)="do()">Consultar</button>
+  <h2>Valor en pesos:{{value}}</h2>
 </div>
